Added  cursor: pointer' for interactable elements

--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -4,6 +4,7 @@
   width: 24px;
   background-image: url("../images/icons/icon-burger-menu.svg");
   background-size: cover;
+  cursor: pointer;
 
   @include hover(transform, scale(1.2));
 
