--- a/src/styles/blocks/primary-button.scss
+++ b/src/styles/blocks/primary-button.scss
@@ -14,6 +14,7 @@
     font-weight: 700;
     line-height: 27px;
     grid-column: 1 / -1;
+    cursor: pointer;
 
     &--detail {
       @include on-table {
