Removed default borders from form fields.

--- a/src/styles/blocks/form.scss
+++ b/src/styles/blocks/form.scss
@@ -3,6 +3,7 @@
     padding-left: 16px;
     box-sizing: border-box;
     width: 100%;
+    border: none;
     outline: none;
 
     font-family: inherit;
